--- a/News/src/app/components/articles/articles.component.html
+++ b/News/src/app/components/articles/articles.component.html
@@ -1,4 +1,1 @@
-<div *ngFor="let article of articles">
-  <h2>{{ article.title }}</h2>
-  <p>{{ article.body }}</p>
-</div>
+<app-article-item *ngFor="let article of articles" [article]="article"></app-article-item>
