--- a/News/src/styles.scss
+++ b/News/src/styles.scss
@@ -1,1 +1,97 @@
-/* You can add global styles to this file, and also import other style files */
+/*!
+ * Bootstrap v5.1.3 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
+
+// scss-docs-start import-stack
+// Configuration  
+
+$vendorURL: '../node_modules/bootstrap/scss/';
+$localURL: './assets/styles/';
+
+@import "../node_modules/bootstrap/scss/functions";
+@import "./assets/styles/functions";
+
+@import "./assets/styles/variables";
+
+@import "../node_modules/bootstrap/scss/mixins";
+@import "./assets/styles/mixins";
+
+@import "../node_modules/bootstrap/scss/utilities";
+@import "./assets/styles/utilities";
+
+// Layout & components
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
+@import "../node_modules/bootstrap/scss/containers";
+@import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/tables";
+@import "../node_modules/bootstrap/scss/forms";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/transitions";
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/button-group";
+@import "../node_modules/bootstrap/scss/nav";
+@import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/accordion";
+@import "../node_modules/bootstrap/scss/breadcrumb";
+@import "../node_modules/bootstrap/scss/pagination";
+@import "../node_modules/bootstrap/scss/badge";
+@import "../node_modules/bootstrap/scss/alert";
+@import "../node_modules/bootstrap/scss/progress";
+@import "../node_modules/bootstrap/scss/list-group";
+@import "../node_modules/bootstrap/scss/close";
+@import "../node_modules/bootstrap/scss/toasts";
+@import "../node_modules/bootstrap/scss/modal";
+@import "../node_modules/bootstrap/scss/tooltip";
+@import "../node_modules/bootstrap/scss/popover";
+@import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/spinners";
+@import "../node_modules/bootstrap/scss/offcanvas";
+@import "../node_modules/bootstrap/scss/placeholders";
+
+@import "./assets/styles/root";
+@import "./assets/styles/reboot";
+@import "./assets/styles/type";
+@import "./assets/styles/images";
+@import "./assets/styles/containers";
+@import "./assets/styles/grid";
+@import "./assets/styles/tables";
+@import "./assets/styles/forms";
+@import "./assets/styles/buttons";
+@import "./assets/styles/transitions";
+@import "./assets/styles/dropdown";
+@import "./assets/styles/button-group";
+@import "./assets/styles/nav";
+@import "./assets/styles/navbar";
+@import "./assets/styles/card";
+@import "./assets/styles/accordion";
+@import "./assets/styles/breadcrumb";
+@import "./assets/styles/pagination";
+@import "./assets/styles/badge";
+@import "./assets/styles/alert";
+@import "./assets/styles/progress";
+@import "./assets/styles/list-group";
+@import "./assets/styles/close";
+@import "./assets/styles/toasts";
+@import "./assets/styles/modal";
+@import "./assets/styles/tooltip";
+@import "./assets/styles/popover";
+@import "./assets/styles/carousel";
+@import "./assets/styles/spinners";
+@import "./assets/styles/offcanvas";
+@import "./assets/styles/placeholders";
+
+// Helpers
+@import "../node_modules/bootstrap/scss/helpers";
+@import "./assets/styles/helpers";
+
+// Utilities
+@import "../node_modules/bootstrap/scss/utilities/api";
+@import "./assets/styles/utilities/api";
+// scss-docs-end import-stack
