--- a/News/src/app/components/article-item/article-item.component.html
+++ b/News/src/app/components/article-item/article-item.component.html
@@ -1,4 +1,8 @@
-<div>
-  <h2>{{ article.title }}</h2>
-  <p>{{ article.body }}</p>
+<div class="col h-100">
+  <div class="card h-100">
+    <div class="card-body">
+      <h5 class="card-title">{{ article.title }}</h5>
+      <p class="card-text">{{ article.body }}</p>
+    </div>
+  </div>
 </div>
