--- a/News/src/app/components/articles/articles.component.html
+++ b/News/src/app/components/articles/articles.component.html
@@ -1,1 +1,4 @@
-<app-article-item *ngFor="let article of articles" [article]="article"></app-article-item>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <app-article-item *ngFor="let article of articles" [article]="article"></app-article-item>
+</div>
+
