--- a/News/src/app/components/article-item/article-item.component.html
+++ b/News/src/app/components/article-item/article-item.component.html
@@ -1,7 +1,7 @@
 <div class="col h-100">
   <div class="card h-100">
     <div class="card-body">
-      <h5 class="card-title">{{ article.title }}</h5>
+      <h5 class="card-title">{{ article.title | titlecase }}</h5>
       <p class="card-text">{{ article.body }}</p>
     </div>
   </div>
