Render comments on their assigned article

--- a/News/src/app/components/comment-item/comment-item.component.html
+++ b/News/src/app/components/comment-item/comment-item.component.html
@@ -1,1 +1,8 @@
-<p>comment-item works!</p>
+<div class="col h-100">
+  <div class="card h-100">
+    <div class="card-body">
+      <h4  class="card-title h5">{{ comment.name | titlecase }}</h4>
+      <p class="card-text">{{ comment.body }}</p>
+    </div>
+  </div>
+</div>
