--- a/News/src/app/components/comment-section/comment-section.component.html
+++ b/News/src/app/components/comment-section/comment-section.component.html
@@ -1,6 +1,7 @@
-<div class="bg-dark rounded border px-4 pt-3 pb-0">
+<div class="bg-dark rounded border px-4 pt-3 pb-4">
   <h3 class="text-light mb-3">Comments</h3>
   <div class="row row-cols-1 g-4 mb-4">
     <app-comment-item *ngFor="let comment of comments" [comment]="comment"></app-comment-item>
   </div>
+  <app-comment-add></app-comment-add>
 </div>
