WIP: Begin work on validation and event emit

--- a/News/src/app/components/comment-item/comment-item.component.html
+++ b/News/src/app/components/comment-item/comment-item.component.html
@@ -2,7 +2,7 @@
   <div class="card text-white bg-secondary h-100">
     <div class="card-body">
       <h4  class="card-title h5">{{ comment.name | titlecase }} <span class="text-dark">({{ comment.email }})</span></h4>
-      <p class="card-text">{{ comment.body }}</p>
+      <p class="card-text">{{ comment.message }}</p>
     </div>
   </div>
 </div>
