--- a/News/src/app/components/comment-add/comment-add.component.html
+++ b/News/src/app/components/comment-add/comment-add.component.html
@@ -1,19 +1,28 @@
 <div class="row text-light">
   <h5>Add Comment</h5>
-  <form>
+  <form (ngSubmit)="onSubmit()">
+
     <div class="mb-3">
       <label for="name" class="form-label">Full Name</label>
-      <input type="text" class="form-control" name="name" [(ngModel)]="name" id="name">
+      <input type="text" required class="form-control" name="name" [(ngModel)]="name" id="name">
     </div>
+
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
-      <input type="email" class="form-control" name="email" [(ngModel)]="email" id="email" aria-describedby="emailHelp">
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+
+      <input type="email" required class="form-control" name="email" [(ngModel)]="email" email="true" id="email" aria-describedby="emailHelp" #emailTemplate="ngModel">
+
+      <div *ngIf="emailTemplate.invalid && (emailTemplate.dirty || emailTemplate.touched)" id="emailValidation" class="invalid-feedback">
+        Please use a valid email.
+      </div>
     </div>
+
     <div class="mb-3">
       <label for="message" class="form-label">Message</label>
-      <textarea class="form-control" name="message" [(ngModel)]="message" id="message" rows="3"></textarea>
+      <textarea class="form-control" required name="message" [(ngModel)]="message" id="message" rows="3"></textarea>
     </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
+
   </form>
 </div>
