--- a/News/src/app/components/comment-add/comment-add.component.html
+++ b/News/src/app/components/comment-add/comment-add.component.html
@@ -4,7 +4,7 @@
 
     <div class="mb-3">
       <label for="name" class="form-label">Full Name</label>
-
+      <p class="text-light">{{nameTemplate.errors | json}}</p>
       <input 
       type="text" 
       required 
@@ -15,7 +15,7 @@
       id="name" 
       #nameTemplate="ngModel" 
       [class.is-invalid]="nameTemplate.errors?.['required'] && (nameTemplate.touched || nameTemplate.dirty)" 
-      [class.is-valid]="nameTemplate.errors! && (nameTemplate.touched || nameTemplate.dirty)">
+      [class.is-valid]="nameTemplate.errors == null && (nameTemplate.touched || nameTemplate.dirty)">
 
       <div *ngIf="nameTemplate.invalid && (nameTemplate.dirty || nameTemplate.touched)" id="emailValidation" class="invalid-feedback">
         Please fill in your name.
@@ -24,7 +24,7 @@
 
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
-      
+      <p class="text-light">{{emailTemplate.errors | json}}</p>
       <input
       type="email"
       placeholder="name@email.com"
@@ -37,7 +37,7 @@
       #emailTemplate="ngModel"
       [(ngModel)]="email"
       [class.is-invalid]="(emailTemplate.errors?.['required'] || emailTemplate.errors?.['email']) && (emailTemplate.touched || emailTemplate.dirty)"
-      [class.is-valid]="emailTemplate.errors! && (emailTemplate.touched || emailTemplate.dirty)">
+      [class.is-valid]="emailTemplate.errors == null && (emailTemplate.touched || emailTemplate.dirty)">
 
       <div *ngIf="emailTemplate.errors?.['email'] && (emailTemplate.dirty || emailTemplate.touched)" class="invalid-feedback">
         Please use a valid email.
@@ -49,6 +49,7 @@
 
     <div class="mb-3">
       <label for="message" class="form-label">Message</label>
+      <p class="text-light">{{messageTemplate.errors | json}}</p>
       <textarea 
       class="form-control" 
       required name="message" 
@@ -57,7 +58,7 @@
       id="message" 
       rows="3"
       [class.is-invalid]="(messageTemplate.errors?.['required'] || messageTemplate.errors?.['email']) && (messageTemplate.touched || messageTemplate.dirty)"
-      [class.is-valid]="messageTemplate.errors! && (messageTemplate.touched || messageTemplate.dirty)"></textarea>
+      [class.is-valid]="messageTemplate.errors == null && (messageTemplate.touched || messageTemplate.dirty)"></textarea>
 
       <div *ngIf="messageTemplate.invalid && (messageTemplate.dirty || messageTemplate.touched)" class="invalid-feedback">
         A message is required.
