--- a/News/src/app/components/comment-add/comment-add.component.html
+++ b/News/src/app/components/comment-add/comment-add.component.html
@@ -1,6 +1,6 @@
 <div class="row text-light">
   <h5>Add Comment</h5>
-  <form #commentForm="ngForm" (ngSubmit)="onSubmit()">
+  <form #commentForm="ngForm" (ngSubmit)="onSubmit();commentForm.reset()">
 
     <div class="mb-3">
       <label for="name" class="form-label">Full Name</label>
